--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@tailwind components;
+@tailwind utilities;
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+	@apply font-sans;
+}
